--- a/src/ArticleList/ArticleList.module.css
+++ b/src/ArticleList/ArticleList.module.css
@@ -1,10 +1,15 @@
 .container {
-    background: #999;
-    border: 1px dashed #666;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 5px rgba(204, 0, 0, 0.5);
-    font-family: Arial, Helvetica, sans-serif;
-    list-style-type: none;
-    padding: 15px;
-  }
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  column-gap: 30px;
+  row-gap: 30px;
+
+  background: #999;
+  border: 1px dashed #666;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 5px rgba(204, 0, 0, 0.5);
+  font-family: Arial, Helvetica, sans-serif;
+  list-style-type: none;
+  padding: 15px;
+}
   
