--- a/src/ArticleListItem/ArticleListItem.module.css
+++ b/src/ArticleListItem/ArticleListItem.module.css
@@ -31,3 +31,49 @@
 .time {
     font-weight: bold;
 }
+
+
+@media (max-width: 600px) {
+    .title {
+        font-size: 70%;
+    }
+  }
+  
+  @media (min-width: 600px) and (max-width: 768px) {
+    .title {
+        font-size: 80%;
+    }
+  }
+  
+  @media (min-width: 768px) and (max-width: 1390px) {
+    .title {
+        font-size: 90%;
+    }
+    .text {
+        font-size: 0.6rem;
+    }
+  }
+
+  @media (min-width: 1390px) and (max-width: 1500px) {
+    .title {
+        font-size: 120%;
+    }
+    .text {
+        font-size: 0.9rem;
+    }
+  }
+
+  @media (min-width: 1500px) and (max-width: 1619px) {
+    .title {
+        font-size: 120%;
+    }
+    .text {
+        font-size: 1rem;
+    }
+  }
+
+  @media (min-width: 1619px) {
+    .text {
+        font-size: 1.1rem;
+    }
+  }
